@@ -25,6 +25,7 @@ Bug fixes
  * Query objects returned from ``PageQuerySet.type_q`` can now be merged with ``|`` (Brady Moe)
  * Add ``rel="noopener noreferrer"`` to target blank links (Anselm Bradford)
  * Additional fields on custom document models now show on the multiple document upload view (Robert Rollins, Sergey Fedoseev)
+ * Help text does not overflow when using a combination of BooleanField and FieldPanel in page model (Dzianis Sheka)
 
 
 Upgrade considerations
